// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionTitle should render correctly with a placeholder 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cast"
      >
        <div
          class="cast__portrait"
        >
          <div
            class="cast__placeholder"
          >
            <img
              alt="Tommy Chanthaboune"
              src="Avatar.svg"
            />
          </div>
        </div>
        <p
          class="cast__name"
        >
          Tommy Chanthaboune
        </p>
        <p
          class="cast__character"
        >
          Developer
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cast"
    >
      <div
        class="cast__portrait"
      >
        <div
          class="cast__placeholder"
        >
          <img
            alt="Tommy Chanthaboune"
            src="Avatar.svg"
          />
        </div>
      </div>
      <p
        class="cast__name"
      >
        Tommy Chanthaboune
      </p>
      <p
        class="cast__character"
      >
        Developer
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SectionTitle should render correctly with portrait 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="cast"
      >
        <div
          class="cast__portrait"
        >
          <img
            alt="Tommy Chanthaboune"
            src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/dal.png&w=100&h=100&transparent=true"
          />
        </div>
        <p
          class="cast__name"
        >
          Tommy Chanthaboune
        </p>
        <p
          class="cast__character"
        >
          Developer
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="cast"
    >
      <div
        class="cast__portrait"
      >
        <img
          alt="Tommy Chanthaboune"
          src="https://a.espncdn.com/combiner/i?img=/i/teamlogos/nfl/500/dal.png&w=100&h=100&transparent=true"
        />
      </div>
      <p
        class="cast__name"
      >
        Tommy Chanthaboune
      </p>
      <p
        class="cast__character"
      >
        Developer
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
